# Database-Repo-Dewey-Demons-

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.db-only.yml  docker-compose.yml  init-db.sql  main.py  migration.sql  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_04_25_1718-f1940bf435be_create_clients.py  2025_04_25_1832-f2b5a2fa71a3_create_rest.py  2025_04_25_2016-861a1b2fb610_fix_isbn.py  2025_04_25_2047-5c55b5b031ff_only_allow_isbn_numbers.py
documentation/: Database Requirements  Physical Database Design.md  Project Demonstration.md  Project Plan
documentation/meeting_logs/: Meeting Log (3-10)  Meeting Log 1 (2-15)  Meeting Log 2 (2-17)  Meeting Log 2 (2-17).docx  Meeting Log 3 (2-24)  Meeting Log 4 (3-10)  Meeting Log 5 (3-24)  Meeting Log 6 (4-14)  Meeting Log 7 (4-28)
src/: migrations.py  models.py  seed.py  utils.py
